added consultant class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,11 +42,11 @@ spring.task.execution.pool.core-size=8
 spring.task.execution.thread-name-prefix=task-
 
 #Email
-spring.mail.host=
-spring.mail.username=
-spring.mail.password=
+spring.mail.host= amazonses.com
+spring.mail.username= rgiv38
+spring.mail.password= RollTide15
 spring.mail.properties.mail.transport.protocol=smtp
-spring.mail.properties.mail.smtp.port=587
+spring.mail.properties.mail.smtp.port=465
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
