--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ tc.system.user.id=system
 
 #Database Info
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://seniorproj.myddns.me/travers_consulting?useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://seniorproj.ddns.net/travers_consulting?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=Ron
 spring.datasource.password=RollTide15
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
